mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongo-depl
  labels:
    app: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-ctr
        image: mongo
        ports:
        - name: mongodb-port
          containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      accessModes:
      - "ReadOnlyMany"
      storageClassName: standard
      resources:
        requests:
          storage: 100Mi

---

apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
