ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapp-ingress
  namespace: practice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app1.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
        pathType: Prefix
